--- a/BookShoppingCartMvcUI/Views/Home/Index.cshtml
+++ b/BookShoppingCartMvcUI/Views/Home/Index.cshtml
@@ -1,24 +1,33 @@
-﻿@{
+﻿@model BookDisplayModel
+@{
     ViewData["Title"] = "Home Page";
 }
 <div class='my-2'>
-   <form class="row row-cols-lg-auto g-3 align-items-center">
+   <form asp-action="Index" class="row row-cols-lg-auto g-3 align-items-center">
   <div class="col-12">
-    <label class="visually-hidden" for="inlineFormSelectPref">Genres</label>
-    <select class="form-select" id="genreId">
-      <option selected>Choose...</option>
-      <option value="1">Action</option>
-      <option value="2">Horror</option>
-      <option value="3">Romance</option>
-      <option value="3">ScienceFiction</option>
+    <label class="visually-hidden" for="genreId">Genres</label>
+    <select class="form-select" id="genreId" name="genreId">
+                <option selected>Genre</option>
+                @foreach (var genre in Model.Genres)
+                {
+                    if (genre.Id == Model.GenreId)
+                    {
+                        <option value="@genre.Id" selected>@genre.GenreName</option>
+                    }
+                    else
+                    {
+                        <option value="@genre.Id">@genre.GenreName</option>
+                    }
+                }
+
     </select>
   </div>
 
         <div class="col-12">
-            <label class="visually-hidden" for="inlineFormInputGroupUsername">Search by title</label>
+            <label class="visually-hidden" for="sterm">Search by title</label>
             <div class="input-group">
                 <div class="input-group-text"></div>
-                <input type="text" class="form-control" id="" placeholder="Search by title">
+                <input type="text" class="form-control" id="sterm" name="sterm" placeholder="Search by title">
             </div>
         </div>
 
@@ -26,21 +35,32 @@
 
   <div class="col-12">
     <button type="submit" class="btn btn-primary">Search</button>
+           <button class="btn" style="background-color:#6CB6FF; color:white;">Reset</button>
+
+
+
   </div>
 </form>
 </div>
 
 <div class="w-100 mt-4 d-flex flex-wrap">
-    @for(int i=1;i<=9;i++){
+    @foreach(var book in Model.Books){
 <div class="card mx-2 mb-4" style="width: 16rem;">
-            <img src="" class="card-img-top" alt="...">
-    <div class="card-body">
-        <h5 class="card-title">Book title</h5>
+    @if(string.IsNullOrEmpty(book.Image))
+            {
+                <img style="width:100%;height:300px" src="/images/no-image.png" class="card-img-top" alt="...">
+            }
+            else
+            {
+                <img style="width:100%;height:300px" src="/images/@book.Image" class="card-img-top" alt="...">
+            }
+            <div class="card-body">
+        <h5 class="card-title">@book.BookName</h5>
         <p class="card-text">
-        Genre:
-        Author:
-        Price:
+        Genre:@book.GenreName
         </p>
+        <p>Author:@book.AuthorName</p>
+        <p>Price:@book.Price</p> 
         <a href="#" class="btn btn-primary">Add to cart</a>
     </div>
 </div>
