Refactoring index page

--- a/BookShoppingCartMvcUI/Views/Home/Index.cshtml
+++ b/BookShoppingCartMvcUI/Views/Home/Index.cshtml
@@ -62,8 +62,25 @@
         <b>Price: </b>@book.Price
         </p>
         
-        <a href="#" class="btn btn-primary">Add to cart</a>
+        <button type="button" onclick="add(@book.Id)" class="btn btn-primary">Add to cart</button>
     </div>
 </div>
     }
 </div>
+@section Scripts{
+    <script>
+        async function add(bookId){
+            try{
+            var response=await fetch(`/Cart/AddItem?bookId=${bookId}`);
+            if(response.status==200){
+            var result=await response.json();
+            var cartCountEl=document.getElementById("cartCount");
+            cartCountEl.innerHTML=result;
+            }
+            }
+            catch(err){
+                console.log(err);
+            }
+        }  
+    </script>
+}
