--- a/BookShoppingCartMvcUI/Views/Shared/_Layout.cshtml
+++ b/BookShoppingCartMvcUI/Views/Shared/_Layout.cshtml
@@ -51,6 +51,25 @@
 </div> 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+<script> 
+        loadCartCount();
+        async function loadCartCount(){
+            
+           try{
+            var response=await fetch(`/Cart/GetTotalItemCart`);
+            console.log(response);
+            if(response.status==200){
+            var result=await response.json();
+            var cartCountEl=document.getElementById("cartCount");
+            cartCountEl.innerHTML=result;
+            }
+            }
+            catch(err){
+                console.log(err);
+            }
+        }
+</script>
 </html>  
  @await RenderSectionAsync("Scripts", required: false)
 
