--- a/BookShoppingCartMvcUI/Views/Home/Index.cshtml
+++ b/BookShoppingCartMvcUI/Views/Home/Index.cshtml
@@ -70,12 +70,17 @@
 @section Scripts{
     <script>
         async function add(bookId){
+            var usernameEl=document.getElementById("username");
+            if(usernameEl==null){
+                window.location.href="/Identity/Account/Login";
+            }
             try{
             var response=await fetch(`/Cart/AddItem?bookId=${bookId}`);
             if(response.status==200){
             var result=await response.json();
             var cartCountEl=document.getElementById("cartCount");
             cartCountEl.innerHTML=result;
+            window.location.href="#cartCount";
             }
             }
             catch(err){
