--- a/BookShoppingCartMvcUI/Views/Shared/_Layout.cshtml
+++ b/BookShoppingCartMvcUI/Views/Shared/_Layout.cshtml
@@ -26,7 +26,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Home/Privacy">Privacy</a>
                     </li>
-                    
+                    </li>
+                    @if (User.IsInRole(Roles.Admin.ToString()))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="/AdminOperations/AllOrders">Orders</a>
+                        </li>
+                    }
+
                     @* <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                         <div class="dropdown-menu">
